# mf-bo4bio

./: .gitignore  .pre-commit-config.yaml  README.md  explanation.md  main.py  pyproject.toml  requirements.txt
data/bo/alpha/gibbon_icm/: gibbon_icm_native_HYBRID10_20250816_2.json  gibbon_icm_native_HYBRID10_20250816_4.json  gibbon_icm_native_HYBRID10_20250816_6.json  gibbon_icm_native_HYBRID2_20250804_1.json  gibbon_icm_native_HYBRID2_20250804_10.json  gibbon_icm_native_HYBRID2_20250804_2.json  gibbon_icm_native_HYBRID2_20250804_9.json  gibbon_icm_native_HYBRID3_20250804_1.json  gibbon_icm_native_HYBRID3_20250804_2.json  gibbon_icm_native_HYBRID3_20250804_4.json  (+10 more)
mfbo4bio/: mfbo_qLogEI.py  mfbo_qUCB.py
notebooks/: cell_parameters.py  cho_model_showcase.ipynb  clone_distribution_plot.ipynb  graphs.ipynb  performance_plots.ipynb
run/: run_all_bo_scenarios.py  run_industrial_scenarios.py  run_single_bo_scenario.py
src/mfbo4bio/: __init__.py  clone_creator.py  conditions_data.py  config.py  industrial_methods.py  mfbo_GIBBON.py  mfbo_qLogEI.py  mfbo_qUCB.py  optimization.py  pipeline.py  presets.py  randomness.py  results.py  utils.py  validation.py  virtual_lab.py
src/mfbo4bio/bo_core/: __init__.py  acquisition.py  candidate_generation.py  engine.py  fidelity_selection.py  state.py
tests/: test_baseline_fixture.py  test_cli_smoke.py  test_config.py  test_entrypoints.py  test_fidelity_selection.py  test_industrial_constraints.py  test_randomness.py  test_reproducibility_regression.py  test_results.py  test_schema_contract.py
(+2461 files in other folders)
